basic fix for county

--- a/frontend/src/components/product_page/ventuerForm.css
+++ b/frontend/src/components/product_page/ventuerForm.css
@@ -17,8 +17,14 @@
 .ventuer-form-container-result{
     grid-area: output;
     margin: 2%;
+    display:flex;
+    flex-direction: row;
 }
 
 .errors{
     color:red
+}
+
+.ventuer-form-container-result-policy{
+    margin: 2%;
 }
